tests/errors/arena_set_oob_panics.ptt
use std/arena

spark {
  a is Arena of int
  a.add(1)
  a.set(4, 2)
}
